feat: function api create and update profile
